# scores

./: .gitignore  LICENSE  LICENSE-3rdParty.md  README.md  scores.code-workspace
docs/: NEC-IR-Protocol.odt  RC6-Timing-Diagram.odt  Scoreboard-Manual.docx
hw/: Score-Board-Digits.kicad_pcb  Score-Board-Digits.kicad_prl  Score-Board-Digits.kicad_pro  Score-Board-Digits.kicad_sch  Score-Board-LinInd-SW.kicad_pcb  Score-Board-LinInd-SW.kicad_prl  Score-Board-LinInd-SW.kicad_pro  Score-Board-LinInd-SW.kicad_sch  Score-Board-LinInd.kicad_pcb  Score-Board-LinInd.kicad_prl  Score-Board-LinInd.kicad_pro  Score-Board-LinInd.kicad_sch  Score-Board.csv  Score-Board.kicad_pcb  Score-Board.kicad_prl  Score-Board.kicad_pro  Score-Board.kicad_sch  Score-Board.xlsx  Score-Board.xml  _autosave-Score-Board.kicad_sch  digits.kicad_sch  ibom.config.ini
hw/Score-Board-Digits/: Score-Board-Digits.kicad_pro
hw/bom/: Score-Board-1-ibom.html
hw/gerbers/Score-Board-Digits/: Score-Board-Digits-B_Cu.gbr  Score-Board-Digits-B_Mask.gbr  Score-Board-Digits-B_Paste.gbr  Score-Board-Digits-B_Silkscreen.gbr  Score-Board-Digits-Edge_Cuts.gbr  Score-Board-Digits-F_Cu.gbr  Score-Board-Digits-F_Mask.gbr  Score-Board-Digits-F_Paste.gbr  Score-Board-Digits-F_Silkscreen.gbr  (+3 more)
hw/part-lib/: MCP1702T-5002E_CB.snap
src/: CMakeLists.txt  board.c  board.h  debug_support.c  debug_support.h  main.c  spi_ops.c  spi_ops.h  system_defs.h
src/be/: be.c  be.h
src/cmt/: cmt.c  cmt.h  core1_main.c  core1_main.h  multicore.c  multicore.h
src/config/: CMakeLists.txt  config.c  config.h  config_cmd.c  config_cmd.h  config_fops.c  config_fops.h  config_hndlr.c  config_hndlr.h  mukob.sample.cfg  mukob.sys.sample.cfg  sample.sys.cfg
src/curswitch/: CMakeLists.txt  curswitch.c  curswitch.h  curswitch_t.h
src/data/: CMakeLists.txt  morse_tables.c  morse_tables.h
src/display/: CMakeLists.txt  display_spi_ops.c  display_spi_ops.h
src/display/oled1106_spi/: CMakeLists.txt  display_oled1106.c  display_oled1106.h  oled1106_spi.c  oled1106_spi.h
src/display/oled1306_i2c/: CMakeLists.txt  display_oled1306.c  display_oled1306.h  oled1306_i2c.c  oled1306_i2c.h
src/gfx/: gfx.h
src/lib/sd_card/sd_driver/: hw_config.c  spi.h
src/net/: CMakeLists.txt  net.c  net.h
src/panel/: CMakeLists.txt  panel.c  panel.h  panel_msg_hndlr.h
src/panel/segments7/: CMakeLists.txt  font_7segment.c  segments7.c  segments7.h
src/rc/: CMakeLists.txt  nec-rx.pio  rc.c  rc.h  rc6-philips-ts.pio  rc6-philips.pio  rc_t.h
src/scorekeeper/: CMakeLists.txt  scorekeeper.c  scorekeeper.h
src/setup/: CMakeLists.txt  setup.c  setup.h
src/term/: term.c  term.h
src/test/: CMakeLists.txt  test.c  test.h
src/ui/: CMakeLists.txt  ui.c  ui.h  ui_disp.c  ui_disp.h  ui_remote_ctrl.c  ui_remote_ctrl.h  ui_term.c  ui_term.h
src/ui/cmd/: cmd.c  cmd.h  cmd_t.h
src/ui/display/: CMakeLists.txt
src/ui/display/oled1306_i2c/: CMakeLists.txt  display_oled1306.c  font_9_10_h.c  oled1306_i2c.c  oled1306_i2c.h
src/ui/display/score_panel/: CMakeLists.txt  panel.c  panel.h
src/ui/scorekeeper/: CMakeLists.txt  scorekeeper.c  scorekeeper.h  sk_app.c  sk_app.h  sk_screen.c  sk_screen.h  sk_tod.c  sk_tod.h
src/ui/segments7/: font_7segment.c  font_7segment.h  segments7.c  segments7.h
src/ui/term/: term.c  term.h
src/util/: util.c  util.h
(+38 files in other folders)
